update manifest with openj9 variants of java8 and java11 on p & z

--- a/manifests/codeready-workspaces.csv.yaml
+++ b/manifests/codeready-workspaces.csv.yaml
@@ -326,8 +326,16 @@ spec:
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-machineexec-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java11
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_s390x
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-openj9-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java11_ppc64le
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java11-openj9-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_java8
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_s390x
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-openj9-rhel8:2.4
+                      - name: RELATED_IMAGE_codeready_workspaces_plugin_java8_ppc64le
+                        value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-java8-openj9-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_kubernetes
                         value: registry-proxy.engineering.redhat.com/rh-osbs/codeready-workspaces-plugin-kubernetes-rhel8:2.4
                       - name: RELATED_IMAGE_codeready_workspaces_plugin_openshift
