--- a/manifests/servicemonitor.yaml
+++ b/manifests/servicemonitor.yaml
@@ -12,4 +12,4 @@ spec:
     - openshift-workspaces
   selector:
     matchLabels:
-      component: codeready
+      app.kubernetes.io/component: codeready
