--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -12,6 +12,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: codeready-operator
+  labels:
+    app.kubernetes.io/name: che
+    app.kubernetes.io/instance: che
+    app.kubernetes.io/component: codeready-operator
 spec:
   replicas: 1
   selector:
@@ -29,7 +33,7 @@ spec:
     spec:
       containers:
         - name: codeready-operator
-          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.10
+          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator:2.11
           ports:
             - containerPort: 60000
               name: metrics
@@ -48,15 +52,15 @@ spec:
             - name: OPERATOR_NAME
               value: codeready-operator
             - name: CHE_VERSION
-              value: 2.10.0
+              value: 2.11.0
             - name: RELATED_IMAGE_che_server
-              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.11
             - name: RELATED_IMAGE_dashboard
-              value: registry.redhat.io/codeready-workspaces/dashboard-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/dashboard-rhel8:2.11
             - name: RELATED_IMAGE_plugin_registry
-              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.11
             - name: RELATED_IMAGE_devfile_registry
-              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.11
             - name: RELATED_IMAGE_pvc_jobs
               value: registry.redhat.io/ubi8/ubi-minimal:8.4
             - name: RELATED_IMAGE_postgres
@@ -64,19 +68,19 @@ spec:
             - name: RELATED_IMAGE_keycloak
               value: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
             - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.11
             - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.11
             - name: RELATED_IMAGE_che_server_secure_exposer_jwt_proxy_image
-              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.11
             - name: RELATED_IMAGE_single_host_gateway
-              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.11
             - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.11
             - name: RELATED_IMAGE_devworkspace_che_operator
-              value: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.11
             - name: RELATED_IMAGE_devworkspace_controller
-              value: registry.redhat.io/codeready-workspaces/devworkspace-controller-rhel8:2.10
+              value: registry.redhat.io/codeready-workspaces/devworkspace-controller-rhel8:2.11
             - name: CHE_FLAVOR
               value: codeready
             - name: CONSOLE_LINK_NAME
@@ -131,6 +135,47 @@ spec:
             limits:
               memory: 256Mi
               cpu: 500m
+        - args:
+            - --enable-leader-election
+            - --metrics-addr
+            - '0'
+          command:
+            - /usr/local/bin/devworkspace-che-operator
+          env:
+            - name: WATCH_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: OPERATOR_NAME
+              value: devworkspace-che-operator
+            - name: MAX_CONCURRENT_RECONCILES
+              value: "1"
+            - name: CONTROLLER_SERVICE_ACCOUNT_NAME
+              value: codeready-operator
+            - name: RELATED_IMAGE_gateway
+              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.11
+            - name: RELATED_IMAGE_gateway_configurer
+              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.11
+          image: quay.io/che-incubator/devworkspace-che-operator:ci
+          imagePullPolicy: Always
+          name: devworkspace-che-operator
+          resources:
+            limits:
+              cpu: 100m
+              memory: 256Mi
+            requests:
+              cpu: 100m
+              memory: 32Mi
+          securityContext:
+            privileged: false
+            readOnlyRootFilesystem: false
+            capabilities:
+              drop:
+                - ALL
       hostIPC: false
       hostNetwork: false
       hostPID: false
