--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -41,68 +41,68 @@ spec:
             - /usr/local/bin/che-operator
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: OPERATOR_NAME
-              value: codeready-operator
-            - name: CHE_VERSION
-              value: 2.11.0
-            - name: RELATED_IMAGE_che_server
-              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.11
-            - name: RELATED_IMAGE_dashboard
-              value: registry.redhat.io/codeready-workspaces/dashboard-rhel8:2.11
-            - name: RELATED_IMAGE_plugin_registry
-              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.11
-            - name: RELATED_IMAGE_devfile_registry
-              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.11
-            - name: RELATED_IMAGE_pvc_jobs
-              value: registry.redhat.io/ubi8/ubi-minimal:8.4
-            - name: RELATED_IMAGE_postgres
-              value: registry.redhat.io/rhel8/postgresql-96:1
-            - name: RELATED_IMAGE_keycloak
-              value: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
-            - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.11
-            - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
-              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.11
-            - name: RELATED_IMAGE_che_server_secure_exposer_jwt_proxy_image
-              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.11
-            - name: RELATED_IMAGE_single_host_gateway
-              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.11
-            - name: RELATED_IMAGE_single_host_gateway_config_sidecar
-              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.11
-            - name: RELATED_IMAGE_devworkspace_che_operator
-              value: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.11
-            - name: RELATED_IMAGE_devworkspace_controller
-              value: registry.redhat.io/codeready-workspaces/devworkspace-controller-rhel8:2.11
             - name: CHE_FLAVOR
               value: codeready
-            - name: CONSOLE_LINK_NAME
-              value: che
-            - name: CONSOLE_LINK_DISPLAY_NAME
-              value: CodeReady Workspaces
-            - name: CONSOLE_LINK_SECTION
-              value: Red Hat Applications
-            - name: CONSOLE_LINK_IMAGE
-              value: /dashboard/assets/branding/loader.svg
-            - name: CHE_IDENTITY_SECRET
-              value: che-identity-secret
             - name: CHE_IDENTITY_POSTGRES_SECRET
               value: che-identity-postgres-secret
+            - name: CHE_IDENTITY_SECRET
+              value: che-identity-secret
             - name: CHE_POSTGRES_SECRET
               value: che-postgres-secret
             - name: CHE_SERVER_TRUST_STORE_CONFIGMAP_NAME
               value: ca-certs
+            - name: CHE_VERSION
+              value: 2.11.0
+            - name: CONSOLE_LINK_DISPLAY_NAME
+              value: CodeReady Workspaces
+            - name: CONSOLE_LINK_IMAGE
+              value: /dashboard/assets/branding/loader.svg
+            - name: CONSOLE_LINK_NAME
+              value: che
+            - name: CONSOLE_LINK_SECTION
+              value: Red Hat Applications
+            - name: OPERATOR_NAME
+              value: codeready-operator
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: RELATED_IMAGE_che_server
+              value: registry.redhat.io/codeready-workspaces/server-rhel8:2.11
+            - name: RELATED_IMAGE_che_server_secure_exposer_jwt_proxy_image
+              value: registry.redhat.io/codeready-workspaces/jwtproxy-rhel8:2.11
+            - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-artifacts-rhel8:2.11
+            - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
+              value: registry.redhat.io/codeready-workspaces/pluginbroker-metadata-rhel8:2.11
+            - name: RELATED_IMAGE_dashboard
+              value: registry.redhat.io/codeready-workspaces/dashboard-rhel8:2.11
+            - name: RELATED_IMAGE_devfile_registry
+              value: registry.redhat.io/codeready-workspaces/devfileregistry-rhel8:2.11
+            - name: RELATED_IMAGE_devworkspace_che_operator
+              value: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.11
+            - name: RELATED_IMAGE_devworkspace_controller
+              value: registry.redhat.io/codeready-workspaces/devworkspace-controller-rhel8:2.11
+            - name: RELATED_IMAGE_keycloak
+              value: registry.redhat.io/rh-sso-7/sso74-openshift-rhel8:7.4
             - name: RELATED_IMAGE_keycloak_ppc64le
               value: registry.redhat.io/rh-sso-7/sso74-openj9-openshift-rhel8:7.4
             - name: RELATED_IMAGE_keycloak_s390x
               value: registry.redhat.io/rh-sso-7/sso74-openj9-openshift-rhel8:7.4
+            - name: RELATED_IMAGE_plugin_registry
+              value: registry.redhat.io/codeready-workspaces/pluginregistry-rhel8:2.11
+            - name: RELATED_IMAGE_postgres
+              value: registry.redhat.io/rhel8/postgresql-96:1
+            - name: RELATED_IMAGE_pvc_jobs
+              value: registry.redhat.io/ubi8/ubi-minimal:8.4
+            - name: RELATED_IMAGE_single_host_gateway
+              value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.11
+            - name: RELATED_IMAGE_single_host_gateway_config_sidecar
+              value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.11
+            - name: WATCH_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           livenessProbe:
             httpGet:
               path: /healthz
@@ -142,25 +142,25 @@ spec:
           command:
             - /usr/local/bin/devworkspace-che-operator
           env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
+            - name: CONTROLLER_SERVICE_ACCOUNT_NAME
+              value: codeready-operator
+            - name: MAX_CONCURRENT_RECONCILES
+              value: '1'
+            - name: OPERATOR_NAME
+              value: devworkspace-che-operator
             - name: POD_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            - name: OPERATOR_NAME
-              value: devworkspace-che-operator
-            - name: MAX_CONCURRENT_RECONCILES
-              value: "1"
-            - name: CONTROLLER_SERVICE_ACCOUNT_NAME
-              value: codeready-operator
             - name: RELATED_IMAGE_gateway
               value: registry.redhat.io/codeready-workspaces/traefik-rhel8:2.11
             - name: RELATED_IMAGE_gateway_configurer
               value: registry.redhat.io/codeready-workspaces/configbump-rhel8:2.11
-          image: quay.io/che-incubator/devworkspace-che-operator:ci
+            - name: WATCH_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          image: registry.redhat.io/codeready-workspaces/devworkspace-rhel8:2.11
           imagePullPolicy: Always
           name: devworkspace-che-operator
           resources:
